--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>V-Keyboard</title>
 </head>
 <body>
     <script src="https://kit.fontawesome.com/aa5ac7551e.js" crossorigin="anonymous"></script>
